5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_1330.log
== SUBMITION (2019-03-12 23:09:01) 
-- CODE:
round(15,0)
-- EXECUTION TIME:
0.157614
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:09:34) 
-- CODE:
round(print)(15,0)
-- EXECUTION TIME:
0.197841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print)(15,0)
TypeError: type builtin_function_or_method doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:09:38) 
-- CODE:
round(print)(15,0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print)(15,0)
TypeError: type builtin_function_or_method doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:09:44) 
-- CODE:
round(print)(15,0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print)(15,0)
TypeError: type builtin_function_or_method doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:10:26) 
-- CODE:
print(round(15,0))
-- EXECUTION TIME:
0.258695
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:10:44) 
-- CODE:
print(15,0)
-- EXECUTION TIME:
0.174355
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
15 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:11:11) 
-- CODE:
print(15,00)
-- EXECUTION TIME:
0.16852
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
15 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:11:22) 
-- CODE:
print(1,50)
-- EXECUTION TIME:
0.149431
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
1 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:11:59) 
-- CODE:
rounde(print(15,0))
-- EXECUTION TIME:
0.136829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    rounde(print(15,0))
NameError: name 'rounde' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:12:09) 
-- CODE:
rounde(print 15,0)
-- EXECUTION TIME:
0.145996
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    rounde(print 15,0)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:12:16) 
-- CODE:
rounde(print 15)
-- EXECUTION TIME:
0.143529
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    rounde(print 15)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:12:28) 
-- CODE:
print(15)
-- EXECUTION TIME:
0.278348
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:12:40) 
-- CODE:
print(15,0)
-- OUTPUT:
15 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:12:45) 
-- CODE:
print(15,0)
-- EXECUTION TIME:
0.143318
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
15 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:13:40) 
-- CODE:
print(round(15,0)
-- EXECUTION TIME:
0.137959
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:13:47) 
-- CODE:
print(round(15,0))
-- EXECUTION TIME:
0.139014
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:14:04) 
-- CODE:
(round(15,0))
-- EXECUTION TIME:
0.130616
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:14:12) 
-- CODE:
round(15,0)
-- EXECUTION TIME:
0.155486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:14:23) 
-- CODE:
round(print) (15,0)
-- EXECUTION TIME:
0.201699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print) (15,0)
TypeError: type builtin_function_or_method doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:14:34) 
-- CODE:
round(print)(15,0))
-- EXECUTION TIME:
0.156441
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    round(print)(15,0))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:14:48) 
-- CODE:
round(print(15,0))
-- EXECUTION TIME:
0.139922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(15,0))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:15:20) 
-- CODE:
round(print(15.0))
-- EXECUTION TIME:
0.204952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(15.0))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:15:35) 
-- CODE:
round(print(15,00))
-- EXECUTION TIME:
0.173695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(15,00))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:16:45) 
-- CODE:
round(print(41,16))
-- EXECUTION TIME:
0.185977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,16))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:17:01) 
-- CODE:
round(41,16)
-- EXECUTION TIME:
0.198143
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:17:15) 
-- CODE:
print(round(41,16))
-- EXECUTION TIME:
0.19134
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:17:24) 
-- CODE:
print(41,16)
-- EXECUTION TIME:
0.136211
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:17:36) 
-- CODE:
round(41,16)
-- EXECUTION TIME:
0.190612
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:17:47) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.188415
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:18:00) 
-- CODE:
round(41,66)
-- EXECUTION TIME:
0.135434
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:18:15) 
-- CODE:
round(print(41,6))
-- EXECUTION TIME:
0.29821
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,6))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:18:21) 
-- CODE:
round(print(41,66))
-- EXECUTION TIME:
0.139962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,66))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:18:52) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.181038
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:18:57) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.166166
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:19:01) 
-- CODE:
print(round(41))
-- EXECUTION TIME:
0.195307
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:19:11) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.142499
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:19:21) 
-- CODE:
print(41,67)
-- EXECUTION TIME:
0.215739
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:19:32) 
-- CODE:
round(41,67)
-- EXECUTION TIME:
0.166656
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:19:44) 
-- CODE:
round(print(41,67)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:19:49) 
-- CODE:
round(print(41,67)
-- EXECUTION TIME:
0.148124
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:19:53) 
-- CODE:
round(print(41,67))
-- EXECUTION TIME:
0.2095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,67))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:19:55) 
-- CODE:
round(print(41,67))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print(41,67))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:20:22) 
-- CODE:
round(print(41.67))
-- EXECUTION TIME:
0.154739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41.67))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:20:38) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.204012
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:21:11) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.140925
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:21:26) 
-- CODE:
round(41,67)
-- EXECUTION TIME:
0.190144
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:21:34) 
-- CODE:
round(41,667)
-- EXECUTION TIME:
0.147572
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:21:55) 
-- CODE:
print(round(41,667)
-- EXECUTION TIME:
0.136724
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:21:59) 
-- CODE:
print(round(41,667))
-- EXECUTION TIME:
0.168256
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:22:07) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.186398
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:22:12) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.146419
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:22:17) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.142077
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:23:12) 
-- CODE:
round(41,67)
-- EXECUTION TIME:
0.154459
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:23:18) 
-- CODE:
round(41)
-- EXECUTION TIME:
0.178315
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:23:36) 
-- CODE:
print(round(41))
-- EXECUTION TIME:
0.137571
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:24:16) 
-- CODE:
print(round(41.34))
-- EXECUTION TIME:
0.196164
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:24:24) 
-- CODE:
print(round(12.34))
-- EXECUTION TIME:
0.194667
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:24:49) 
-- CODE:
print(round(16.34))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:24:54) 
-- CODE:
print(round(16.34))
-- EXECUTION TIME:
0.245016
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:01) 
-- CODE:
print(round(16.35))
-- EXECUTION TIME:
0.142362
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:09) 
-- CODE:
print(round(16.24))
-- EXECUTION TIME:
0.153045
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:14) 
-- CODE:
print(round(16.27))
-- EXECUTION TIME:
0.116679
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:33) 
-- CODE:
print(round(16))
-- EXECUTION TIME:
0.179279
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:39) 
-- CODE:
print(round(14))
-- EXECUTION TIME:
0.227302
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:48) 
-- CODE:
round(14)
-- EXECUTION TIME:
0.293911
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:25:59) 
-- CODE:
round(14.44)
-- EXECUTION TIME:
0.175732
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:26:09) 
-- CODE:
round(print(14.44))
-- EXECUTION TIME:
0.19165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(14.44))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:26:18) 
-- CODE:
round(print(12.34))
-- EXECUTION TIME:
0.136024
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(12.34))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:26:48) 
-- CODE:
round(print(2.34))
-- EXECUTION TIME:
0.16054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(2.34))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:26:59) 
-- CODE:
print(round(2.34))
-- EXECUTION TIME:
0.183105
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:27:14) 
-- CODE:
print(round(2.67))
-- EXECUTION TIME:
0.146309
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:27:19) 
-- CODE:
print(round(12.67))
-- EXECUTION TIME:
0.177968
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:27:44) 
-- CODE:
print(round(12.0))
-- EXECUTION TIME:
0.147723
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:27:54) 
-- CODE:
print(round(12.000))
-- EXECUTION TIME:
0.13352
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:28:09) 
-- CODE:
print(round(12,0))
-- EXECUTION TIME:
0.184708
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:28:16) 
-- CODE:
print(round(12,34))
-- EXECUTION TIME:
0.123519
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:28:33) 
-- CODE:
round(12)
-- EXECUTION TIME:
0.21584
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:28:44) 
-- CODE:
round(print(12))
-- EXECUTION TIME:
0.191413
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(12))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:08) 
-- CODE:
round(print(41,6))
-- EXECUTION TIME:
0.188241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,6))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:13) 
-- CODE:
round(print(41,7))
-- EXECUTION TIME:
0.193055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,7))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:18) 
-- CODE:
round(print(41,67))
-- EXECUTION TIME:
0.194724
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,67))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:28) 
-- CODE:
round(41,67)
-- EXECUTION TIME:
0.170016
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:46) 
-- CODE:
round(41,66666667)
-- EXECUTION TIME:
0.263524
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:54) 
-- CODE:
print(round(41,66666667)
-- EXECUTION TIME:
0.128124
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:29:58) 
-- CODE:
print(round(41,66666667))
-- EXECUTION TIME:
0.202522
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:10) 
-- CODE:
print(41,66666667)
-- EXECUTION TIME:
0.119138
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:21) 
-- CODE:
print(41,6666666)
-- EXECUTION TIME:
0.118496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:31) 
-- CODE:
print(round(41,6666666))
-- EXECUTION TIME:
0.136904
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:41) 
-- CODE:
round(41,6666666)
-- EXECUTION TIME:
0.131898
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:30:50) 
-- CODE:
round(41,66666667)
-- EXECUTION TIME:
0.18831
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:02) 
-- CODE:
round(print(41,66666667))
-- EXECUTION TIME:
0.139129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,66666667))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:11) 
-- CODE:
round(print(41,67))
-- EXECUTION TIME:
0.207061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    round(print(41,67))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:22) 
-- CODE:
round(41,67))
-- EXECUTION TIME:
0.189376
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    round(41,67))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:25) 
-- CODE:
round(41,67)
-- EXECUTION TIME:
0.142466
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:31) 
-- CODE:
print(41,67)
-- EXECUTION TIME:
0.198368
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:42) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.133234
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:31:47) 
-- CODE:
print(round(41,67)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:31:54) 
-- CODE:
print(round(41,67)
-- EXECUTION TIME:
0.153863
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:16) 
-- CODE:
print(round(41.67)
-- EXECUTION TIME:
0.143426
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:23) 
-- CODE:
print(round(41.6)
-- EXECUTION TIME:
0.174076
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:29) 
-- CODE:
print(round(41.66)
-- EXECUTION TIME:
0.18855
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:34) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.174068
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:39) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.156053
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:45) 
-- CODE:
print(round(41.6))
-- EXECUTION TIME:
0.16723
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:51) 
-- CODE:
print(round(41.7))
-- EXECUTION TIME:
0.186973
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:32:58) 
-- CODE:
print(round(41,7))
-- EXECUTION TIME:
0.146461
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:02) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.144343
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:24) 
-- CODE:
print(round 41,67)
-- EXECUTION TIME:
0.175343
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,67)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:30) 
-- CODE:
print(round 41,66)
-- EXECUTION TIME:
0.198289
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,66)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:40) 
-- CODE:
print(round 41,67)
-- EXECUTION TIME:
0.143986
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,67)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:43) 
-- CODE:
print(round 41,6)
-- EXECUTION TIME:
0.201301
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,6)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:51) 
-- CODE:
print(round 41.66)
-- EXECUTION TIME:
0.153667
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41.66)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:33:57) 
-- CODE:
print(round 41.67)
-- EXECUTION TIME:
0.197039
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41.67)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:18) 
-- CODE:
print(round (41.67)
-- EXECUTION TIME:
0.213418
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:22) 
-- CODE:
print(round (41.67))
-- EXECUTION TIME:
0.134591
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:28) 
-- CODE:
(round (41.67))
-- EXECUTION TIME:
0.177706
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:31) 
-- CODE:
round (41.67))
-- EXECUTION TIME:
0.140626
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    round (41.67))
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:35) 
-- CODE:
round (41.67)
-- EXECUTION TIME:
0.219284
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:39) 
-- CODE:
round(41.67)
-- EXECUTION TIME:
0.163856
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:44) 
-- CODE:
round(41.6)
-- EXECUTION TIME:
0.206765
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:49) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.171369
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:34:56) 
-- CODE:
round(41,66)
-- EXECUTION TIME:
0.158166
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:35:02) 
-- CODE:
round(41,67)
-- EXECUTION TIME:
0.140129
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:35:27) 
-- CODE:
print(round(41,67)
-- EXECUTION TIME:
0.159932
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:35:36) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.17266
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:38:24) 
-- CODE:
print round(41,67)
-- EXECUTION TIME:
0.216354
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print round(41,67)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:38:42) 
-- CODE:
print (round 41,67)
-- EXECUTION TIME:
0.202882
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print (round 41,67)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:38:47) 
-- CODE:
print (round 41,66)
-- EXECUTION TIME:
0.182103
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print (round 41,66)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:38:53) 
-- CODE:
print (round 41.66)
-- EXECUTION TIME:
0.217718
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print (round 41.66)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:38:58) 
-- CODE:
print (round 41.67)
-- EXECUTION TIME:
0.198511
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print (round 41.67)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:06) 
-- CODE:
print(round 41.67)
-- EXECUTION TIME:
0.167646
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41.67)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:12) 
-- CODE:
print(round 41.66)
-- EXECUTION TIME:
0.201538
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41.66)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:16) 
-- CODE:
print(round 41.6)
-- EXECUTION TIME:
0.134055
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41.6)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:21) 
-- CODE:
print(round 41.7)
-- EXECUTION TIME:
0.178064
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41.7)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:25) 
-- CODE:
print(round 41,7)
-- EXECUTION TIME:
0.14406
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,7)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:29) 
-- CODE:
print(round 41,67)
-- EXECUTION TIME:
0.149517
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,67)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:34) 
-- CODE:
print(round 41,66)
-- EXECUTION TIME:
0.135835
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,66)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:37) 
-- CODE:
print(round 41,6)
-- EXECUTION TIME:
0.124944
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round 41,6)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:52) 
-- CODE:
print(round (41,6))
-- EXECUTION TIME:
0.141699
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:39:57) 
-- CODE:
print(round (41,66))
-- EXECUTION TIME:
0.165801
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:02) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.130772
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:05) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.167328
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:09) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.142251
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:12) 
-- CODE:
print(round(41,7))
-- EXECUTION TIME:
0.173275
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:22) 
-- CODE:
print(round(41.7))
-- EXECUTION TIME:
0.139011
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:27) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.181987
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:30) 
-- CODE:
print(round(41.6))
-- EXECUTION TIME:
0.163126
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:35) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.18217
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:41:23) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.15192
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:41:34) 
-- CODE:
print(round((41.67))
-- EXECUTION TIME:
0.220127
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:41:44) 
-- CODE:
print(round(41.67)
-- EXECUTION TIME:
0.144743
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:41:50) 
-- CODE:
print(round((41.67)
-- EXECUTION TIME:
0.155216
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:41:54) 
-- CODE:
print(round((41.67))
-- EXECUTION TIME:
0.184219
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:42:02) 
-- CODE:
print(round (41.67))
-- EXECUTION TIME:
0.198417
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:42:10) 
-- CODE:
print(round (41.6))
-- EXECUTION TIME:
0.128893
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:42:33) 
-- CODE:
print(round(41.6))
-- EXECUTION TIME:
0.17894
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:42:39) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.147044
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:42:44) 
-- CODE:
print(round(41.7))
-- EXECUTION TIME:
0.148404
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:43:31) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.193916
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:43:54) 
-- CODE:
print(round(250/6 = 41))
-- EXECUTION TIME:
0.154557
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round(250/6 = 41))
               ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:44:41) 
-- CODE:
print(round(41.44))
-- EXECUTION TIME:
0.14146
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:44:48) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.143747
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:45:02) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.132987
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:45:38) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.134126
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:45:53) 
-- CODE:
print((round(41.66))
-- EXECUTION TIME:
0.171945
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:45:58) 
-- CODE:
print((round(41.67))
-- EXECUTION TIME:
0.117527
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:46:02) 
-- CODE:
print((round(41.67)))
-- EXECUTION TIME:
0.264187
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:47:21) 
-- CODE:
print("round(41.67)"
-- EXECUTION TIME:
0.146844
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:47:52) 
-- CODE:
print "round"(41.67)
-- EXECUTION TIME:
0.208164
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print "round"(41.67)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:07) 
-- CODE:
print ("round"(41.67))
-- EXECUTION TIME:
0.142553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    print ("round"(41.67))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:15) 
-- CODE:
print (round(41.67))
-- EXECUTION TIME:
0.281548
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:20) 
-- CODE:
print (round (41.67))
-- EXECUTION TIME:
0.185664
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:24) 
-- CODE:
print(round (41.67))
-- EXECUTION TIME:
0.159437
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:27) 
-- CODE:
print(round(41.67))
-- EXECUTION TIME:
0.133999
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:51) 
-- CODE:
print(41.66666667)
-- EXECUTION TIME:
0.14784
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:48:58) 
-- CODE:
print(41.6666666)
-- EXECUTION TIME:
0.143484
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:49:02) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.176854
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:49:07) 
-- CODE:
print(41.67)
-- EXECUTION TIME:
0.205511
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:26:13) 
-- CODE:
print(41.67)
-- EXECUTION TIME:
0.214141
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:45:50) 
-- CODE:
print(41.67)
-- EXECUTION TIME:
0.133311
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 02:55:49) 
-- CODE:
print(round(250/6),2)
-- OUTPUT:
42 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 02:55:56) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.136066
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 02:56:30) 
-- CODE:
print(round((250/6),2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 02:56:40) 
-- CODE:
print(round((250/6),2))
-- EXECUTION TIME:
0.200539
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
